--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,52 +12,131 @@
     android:paddingTop="16dp">
 
     <TextView
-        android:id="@+id/titulo"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Some Title"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/title_eletric_car"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:layout_marginBottom="680dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_tab_cars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtitle_all_cars"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_tab_fav"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+
+    <TextView
+        android:id="@+id/tv_tab_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtitle_fav"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toEndOf="@id/tv_tab_cars"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_tab_cars"/>
 
     <ImageView
-        android:id="@+id/img_01"
-        android:layout_width="wrap_content"
+        android:id="@+id/iv_01"
+        android:layout_width="300dp"
         android:layout_height="200dp"
         android:src="@drawable/carro_eletrico_01"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titulo"
+        app:layout_constraintTop_toBottomOf="@id/tv_tab_cars"
         />
 
-    <EditText
-        android:id="@+id/edit_name"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_price"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:hint="Type your name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_01"
+        android:text="@string/field_price"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_01"
+        app:layout_constraintStart_toStartOf="@id/iv_01"
         />
 
-    <EditText
-        android:id="@+id/edit_surname"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_price_val"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Type your surname"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_name"
+        android:text="@string/field_price_val"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@id/tv_price"
+        app:layout_constraintStart_toEndOf="@id/tv_price"
         />
 
-    <Button
-        android:id="@+id/btn_01"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_battery"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:hint="Click here!"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/field_battery"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_price"
+        app:layout_constraintStart_toStartOf="@id/tv_price"
+        />
+
+    <TextView
+        android:id="@+id/tv_battery_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/field_battery_val"
+        app:layout_constraintTop_toTopOf="@id/tv_battery"
+        app:layout_constraintStart_toEndOf="@id/tv_battery"
+        />
+
+    <TextView
+        android:id="@+id/tv_power"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="@string/field_power"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_battery"
+        app:layout_constraintStart_toStartOf="@id/tv_battery"
+        />
+
+    <TextView
+        android:id="@+id/tv_power_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/field_power_val"
+        app:layout_constraintTop_toTopOf="@id/tv_power"
+        app:layout_constraintStart_toEndOf="@id/tv_power"
+        />
+
+    <TextView
+        android:id="@+id/tv_charge"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:text="@string/field_charge"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_power"
+        app:layout_constraintStart_toStartOf="@id/tv_power"
+        />
+
+    <TextView
+        android:id="@+id/tv_charge_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/field_charge_val"
+        app:layout_constraintTop_toTopOf="@id/tv_charge"
+        app:layout_constraintStart_toEndOf="@id/tv_charge"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
