--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,6 +139,38 @@
         app:layout_constraintStart_toEndOf="@id/tv_charge"
         />
 
+    <EditText
+        android:id="@+id/ed_price_km"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/filed_inp_price_per_km"
+        android:inputType="number"
+        android:maxLength="10"
+        android:maxLines="2"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_charge"/>
+
+    <EditText
+        android:id="@+id/ed_traveled"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/filed_inp_km_traveled"
+        android:inputType="number"
+        android:maxLength="10"
+        android:maxLines="2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/ed_price_km"/>
+
+    <Button
+        android:id="@+id/bt_calc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_calculate"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/ed_traveled"
+        />
+
+<!-- incluir edit texts para: text views resultado e preço-->
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!-- THIRD LAYOUT: RELATIVE
