--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,26 +140,26 @@
         />
 
     <EditText
-        android:id="@+id/ed_price_km"
+        android:id="@+id/et_price_km"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/filed_inp_price_per_km"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:maxLength="10"
         android:maxLines="2"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/tv_charge"/>
 
     <EditText
-        android:id="@+id/ed_traveled"
+        android:id="@+id/et_traveled"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/filed_inp_km_traveled"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:maxLength="10"
         android:maxLines="2"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/ed_price_km"/>
+        app:layout_constraintTop_toBottomOf="@id/et_price_km"/>
 
     <Button
         android:id="@+id/bt_calc"
@@ -167,10 +167,30 @@
         android:layout_height="wrap_content"
         android:text="@string/button_calculate"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/ed_traveled"
+        app:layout_constraintTop_toBottomOf="@id/et_traveled"
         />
 
-<!-- incluir edit texts para: text views resultado e preço-->
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/field_result_of_calculation"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/bt_calc"
+        app:layout_constraintStart_toStartOf="@id/tv_charge"
+        android:visibility="gone"
+        />
+
+    <TextView
+        android:id="@+id/tv_result_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="@id/tv_result"
+        app:layout_constraintStart_toEndOf="@id/tv_result"
+        android:visibility="gone"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!-- THIRD LAYOUT: RELATIVE
