--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,32 +21,27 @@
         android:layout_marginBottom="680dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
-    <TextView
-        android:id="@+id/tv_tab_cars"
-        android:layout_width="wrap_content"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tl_car_fav"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/subtitle_all_cars"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_tab_fav"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title">
 
-    <TextView
-        android:id="@+id/tv_tab_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/subtitle_fav"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toEndOf="@id/tv_tab_cars"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_tab_cars"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/subtitle_all_cars"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/subtitle_fav"/>
+
+    </com.google.android.material.tabs.TabLayout>
 
     <ImageView
         android:id="@+id/iv_01"
@@ -56,7 +51,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_tab_cars"
+        app:layout_constraintTop_toBottomOf="@id/tl_car_fav"
+        android:contentDescription="@string/desc_iv01"
         />
 
     <TextView
@@ -139,56 +135,15 @@
         app:layout_constraintStart_toEndOf="@id/tv_charge"
         />
 
-    <EditText
-        android:id="@+id/et_price_km"
-        android:layout_width="match_parent"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_goto_calc"
         android:layout_height="wrap_content"
-        android:hint="@string/filed_inp_price_per_km"
-        android:inputType="numberDecimal"
-        android:maxLength="10"
-        android:maxLines="2"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_charge"/>
-
-    <EditText
-        android:id="@+id/et_traveled"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/filed_inp_km_traveled"
-        android:inputType="numberDecimal"
-        android:maxLength="10"
-        android:maxLines="2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/et_price_km"/>
-
-    <Button
-        android:id="@+id/bt_calc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_calculate"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/et_traveled"
-        />
-
-    <TextView
-        android:id="@+id/tv_result"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/field_result_of_calculation"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/bt_calc"
-        app:layout_constraintStart_toStartOf="@id/tv_charge"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/tv_result_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/tv_result"
-        app:layout_constraintStart_toEndOf="@id/tv_result"
-        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/calc"
+        android:background="@color/white"
+        android:contentDescription="@string/desc_fab_gotocalc_button"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
