--- a/app/src/main/res/layout/activity_calc_autonomy.xml
+++ b/app/src/main/res/layout/activity_calc_autonomy.xml
@@ -16,15 +16,16 @@
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/field_calculate_autonomy"
-        android:textStyle="bold"
-        android:textSize="16sp"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
         android:layout_marginBottom="680dp"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toEndOf="@id/iv_left_arrow"
