--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,124 +16,156 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_eletric_car"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:layout_marginBottom="680dp"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_car_fav"
+    <TextView
+        android:id="@+id/tv_cars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text= "@string/subtitle_all_cars"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="@id/tv_title"
+        app:layout_constraintEnd_toStartOf="@id/tv_fav"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
+        />
+
+    <TextView
+        android:id="@+id/tv_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/subtitle_fav"
+        app:layout_constraintTop_toTopOf="@id/tv_cars"
+        app:layout_constraintStart_toEndOf="@id/tv_cars"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/TextAppearance.MaterialComponents.Headline6"
+        />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_car"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/subtitle_all_cars"/>
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/subtitle_fav"/>
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <ImageView
-        android:id="@+id/iv_01"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:src="@drawable/carro_eletrico_01"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tl_car_fav"
-        android:contentDescription="@string/desc_iv01"
-        />
-
-    <TextView
-        android:id="@+id/tv_price"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="@string/field_price"
+        app:layout_constraintTop_toBottomOf="@id/tv_cars"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_01"
-        app:layout_constraintStart_toStartOf="@id/iv_01"
-        />
+        app:cardCornerRadius="24dp"
+        app:cardBackgroundColor="@color/gray"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_car"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <ImageView
+                android:id="@+id/iv_01"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:src="@drawable/carro_eletrico_01"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/desc_iv01"
+                />
 
-    <TextView
-        android:id="@+id/tv_price_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/field_price_val"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/tv_price"
-        app:layout_constraintStart_toEndOf="@id/tv_price"
-        />
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="@string/field_price"
+                style="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintTop_toBottomOf="@id/iv_01"
+                app:layout_constraintStart_toStartOf="@id/iv_01"
+                />
 
-    <TextView
-        android:id="@+id/tv_battery"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="@string/field_battery"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_price"
-        app:layout_constraintStart_toStartOf="@id/tv_price"
-        />
+            <TextView
+                android:id="@+id/tv_price_val"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/field_price_val"
+                android:layout_marginStart="8dp"
+                style="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintTop_toTopOf="@id/tv_price"
+                app:layout_constraintStart_toEndOf="@id/tv_price"
+                />
 
-    <TextView
-        android:id="@+id/tv_battery_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/field_battery_val"
-        app:layout_constraintTop_toTopOf="@id/tv_battery"
-        app:layout_constraintStart_toEndOf="@id/tv_battery"
-        />
+            <TextView
+                android:id="@+id/tv_battery"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="@string/field_battery"
+                android:layout_marginTop="4dp"
+                style="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintTop_toBottomOf="@id/tv_price"
+                app:layout_constraintStart_toStartOf="@id/tv_price"
+                />
 
-    <TextView
-        android:id="@+id/tv_power"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="@string/field_power"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_battery"
-        app:layout_constraintStart_toStartOf="@id/tv_battery"
-        />
+            <TextView
+                android:id="@+id/tv_battery_val"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/field_battery_val"
+                style="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintTop_toTopOf="@id/tv_battery"
+                app:layout_constraintStart_toEndOf="@id/tv_battery"
+                />
 
-    <TextView
-        android:id="@+id/tv_power_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/field_power_val"
-        app:layout_constraintTop_toTopOf="@id/tv_power"
-        app:layout_constraintStart_toEndOf="@id/tv_power"
-        />
+            <TextView
+                android:id="@+id/tv_power"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="@string/field_power"
+                android:layout_marginTop="4dp"
+                style="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintTop_toBottomOf="@id/tv_battery"
+                app:layout_constraintStart_toStartOf="@id/tv_battery"
+                />
 
-    <TextView
-        android:id="@+id/tv_charge"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="@string/field_charge"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_power"
-        app:layout_constraintStart_toStartOf="@id/tv_power"
-        />
+            <TextView
+                android:id="@+id/tv_power_val"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/field_power_val"
+                style="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintTop_toTopOf="@id/tv_power"
+                app:layout_constraintStart_toEndOf="@id/tv_power"
+                />
 
-    <TextView
-        android:id="@+id/tv_charge_val"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/field_charge_val"
-        app:layout_constraintTop_toTopOf="@id/tv_charge"
-        app:layout_constraintStart_toEndOf="@id/tv_charge"
-        />
+            <TextView
+                android:id="@+id/tv_charge"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="@string/field_charge"
+                android:layout_marginTop="4dp"
+                style="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintTop_toBottomOf="@id/tv_power"
+                app:layout_constraintStart_toStartOf="@id/tv_power"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_charge_val"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@string/field_charge_val"
+                style="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintTop_toTopOf="@id/tv_charge"
+                app:layout_constraintStart_toEndOf="@id/tv_charge"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_goto_calc"
@@ -142,116 +174,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/calc"
-        android:background="@color/white"
         android:contentDescription="@string/desc_fab_gotocalc_button"
+        android:background="?attr/selectableItemBackgroundBorderless"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!-- THIRD LAYOUT: RELATIVE
-<RelativeLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp"
-    android:paddingTop="16dp">
-
-    <TextView
-        android:id="@+id/text_welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello! Type something..."/>
-
-    <EditText
-        android:id="@+id/edit_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Name"
-        android:layout_below="@id/text_welcome"/>
-
-    <Spinner
-        android:id="@+id/edit_surname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edit_name"
-        android:hint="Surname"/>
-
-    <TextView
-        android:id="@+id/text_musical_taste"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Musical"
-        android:layout_below="@id/edit_surname"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send"
-        android:layout_below="@id/text_musical_taste"/>
-</RelativeLayout>
- -->
-
-<!-- SECOND LAYOUT: LINEAR
-<LinearLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Here goes our text :D"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Our second text"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type something here"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Second edit field"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send form"/>
-
-</LinearLayout>
--->
-
-<!-- FIRST LAYOUT: CREATED BY ACCIDENT AS LINEAR THEN CHANGED TO FOLLOW THE COURSE
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/hello_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="512dp"
-        android:text="Hello!"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
--->
