--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- FOURTH LAYOUT: CONSTRAINT -->
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,13 +14,13 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_eletric_car"
+        android:text="@string/app_name"
         style="@style/TextAppearance.MaterialComponents.Headline5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <!--<com.google.android.material.tabs.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_menus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,54 +35,19 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/subtitle_all_cars"/>
+            android:text="@string/subtitle_fav"/>
 
-    </com.google.android.material.tabs.TabLayout> -->
+    </com.google.android.material.tabs.TabLayout>
 
-    <TextView
-        android:id="@+id/tv_cars"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text= "@string/subtitle_all_cars"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintEnd_toStartOf="@id/tv_fav"
-        style="@style/TextAppearance.MaterialComponents.Headline6"
-        />
-
-    <TextView
-        android:id="@+id/tv_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/subtitle_fav"
-        app:layout_constraintTop_toTopOf="@id/tv_cars"
-        app:layout_constraintStart_toEndOf="@id/tv_cars"
-        app:layout_constraintEnd_toEndOf="parent"
-        style="@style/TextAppearance.MaterialComponents.Headline6"
-        />
-    
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list_cars"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vp_section"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_cars"
+        app:layout_constraintTop_toBottomOf="@id/tl_menus"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_car"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_goto_calc"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/calc"
-        android:contentDescription="@string/desc_fab_gotocalc_button"
-        android:background="?attr/selectableItemBackgroundBorderless"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- xmlns:tools="http://schemas.android.com/tools" -->
