Handled lack of connectivity case on Cars Fragment. The same handler will be done on the favorite's fragment in a near future. Also refactored to retrofit.

--- a/app/src/main/res/layout/fragment_cars.xml
+++ b/app/src/main/res/layout/fragment_cars.xml
@@ -48,6 +48,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
-    <!--style="?android:attr/progressBarStyleHorizontal" -->
+
+    <ImageView
+        android:id="@+id/iv_empty"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/wifi_dead"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:contentDescription="@string/no_connectivity"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
